# YT-downloader

./: .gitignore  README.md  core.py  gui.py  install.bat  install.sh  main.py  pyproject.toml  run.bat  run.sh
core/: __init__.py  downloader.py  playlist.py  utils.py
gui/: __init__.py  components.py  main_window.py  queue_ui.py  settings.py  threads.py
