[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-downloader"
version = "0.1.0"
description = "A YouTube Downloader application with GUI"
readme = "README.md"
authors = [
    { name = "User", email = "user@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "yt-dlp",
    "PySide6",
    "requests",
]

[tool.setuptools]
py-modules = ["gui", "core"]
